--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -14,7 +14,7 @@ BROWSER = chrome
 # target execution: local or remote
 TARGET = local
 # headless mode only for chrome or firefox and local execution
-HEADLESS = false
+HEADLESS = true
 URL_CRM = https://rise.fairsketch.com/signin
 # grid url and port
 REMOTE_URL = localhost
@@ -37,7 +37,7 @@ ZIP_FOLDER = no
 ZIP_FOLDER_PATH = reports/CucumberExtentReports
 ZIP_FOLDER_NAME = CucumberExtentReports.zip
 # Video Record
-VIDEO_RECORD = yes
+VIDEO_RECORD = no
 #override_reports --> yes or no
 #If no -> Report name will be like
 #   - Windows_10_Tue_Oct_05_02_30_46_IST_2022_ExtentReports.html
