--- a/pom.xml
+++ b/pom.xml
@@ -133,18 +133,18 @@
             <version>1.14.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>tech.grasshopper</groupId>
-            <artifactId>pdfextentreporter</artifactId>
-            <version>1.3.2</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>tech.grasshopper</groupId>-->
+<!--            <artifactId>pdfextentreporter</artifactId>-->
+<!--            <version>1.3.2</version>-->
+<!--        </dependency>-->
 
-        <!-- https://mvnrepository.com/artifact/tech.grasshopper/extent-pdf-report -->
-        <dependency>
-            <groupId>tech.grasshopper</groupId>
-            <artifactId>extent-pdf-report</artifactId>
-            <version>2.12.0</version>
-        </dependency>
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/tech.grasshopper/extent-pdf-report &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>tech.grasshopper</groupId>-->
+<!--            <artifactId>extent-pdf-report</artifactId>-->
+<!--            <version>2.12.0</version>-->
+<!--        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
         <dependency>
