--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>anhtester.com</groupId>
     <artifactId>anhtester-cucumber-testng</artifactId>
-    <version>1.7.0</version>
+    <version>1.7.1</version>
     <name>TestAutomationFrameworkCucumberTestNG</name>
     <url>https://github.com/anhtester/AutomationFrameworkCucumberTestNG</url>
 
@@ -19,13 +19,13 @@
         <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
 
         <cucumber.java.version>7.15.0</cucumber.java.version>
-        <gherkin.version>27.0.0</gherkin.version>
+        <gherkin.version>28.0.0</gherkin.version>
         <cucumber-reporting.version>5.7.5</cucumber-reporting.version>
-        <selenium.version>4.17.0</selenium.version>
+        <selenium.version>4.18.1</selenium.version>
         <testng.version>7.9.0</testng.version>
         <webdrivermanager.version>5.6.3</webdrivermanager.version>
-        <aspectjweaver.version>1.9.21</aspectjweaver.version>
-        <log4j.version>3.0.0-beta1</log4j.version>
+        <aspectjweaver.version>1.9.21.1</aspectjweaver.version>
+        <log4j.version>2.23.0</log4j.version>
         <allure-testng.version>2.25.0</allure-testng.version>
         <allure-maven.version>2.12.0</allure-maven.version>
         <allure-environment-writer.version>1.0.0</allure-environment-writer.version>
@@ -40,15 +40,15 @@
         <assertj.version>3.24.2</assertj.version>
         <monte-screen-recorder.version>0.7.7.0</monte-screen-recorder.version>
         <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
-        <google.zxing.version>3.5.2</google.zxing.version>
+        <google.zxing.version>3.5.3</google.zxing.version>
         <lombok.version>1.18.30</lombok.version>
         <google.guava.version>33.0.0-jre</google.guava.version>
         <data.supplier.version>1.9.7</data.supplier.version>
         <javax.mail.version>1.6.2</javax.mail.version>
-        <zip.version>1.16</zip.version>
+        <zip.version>1.17</zip.version>
         <jackson.version>2.16.1</jackson.version>
         <datafaker.version>2.1.0</datafaker.version>
-        <telegram.bot.version>7.0.1</telegram.bot.version>
+        <telegram.bot.version>7.1.0</telegram.bot.version>
 
 
         <!-- Suite XML path -->
