--- a/pom.xml
+++ b/pom.xml
@@ -16,17 +16,17 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java-compiler.version>17</java-compiler.version>
         <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
-        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
 
-        <cucumber.java.version>7.15.0</cucumber.java.version>
+        <cucumber.java.version>7.16.1</cucumber.java.version>
         <gherkin.version>28.0.0</gherkin.version>
         <cucumber-reporting.version>5.7.5</cucumber-reporting.version>
-        <selenium.version>4.18.1</selenium.version>
+        <selenium.version>4.19.1</selenium.version>
         <testng.version>7.9.0</testng.version>
         <webdrivermanager.version>5.6.3</webdrivermanager.version>
-        <aspectjweaver.version>1.9.21.1</aspectjweaver.version>
+        <aspectjweaver.version>1.9.22</aspectjweaver.version>
         <log4j.version>2.23.0</log4j.version>
-        <allure-testng.version>2.25.0</allure-testng.version>
+        <allure-testng.version>2.26.0</allure-testng.version>
         <allure-maven.version>2.12.0</allure-maven.version>
         <allure-environment-writer.version>1.0.0</allure-environment-writer.version>
         <allure.cmd.download.url>
@@ -35,20 +35,20 @@
         <extentreports.version>5.1.1</extentreports.version>
         <apache-poi.version>5.2.5</apache-poi.version>
         <apache-poi-xml.version>5.2.5</apache-poi-xml.version>
-        <commons-io.version>2.15.1</commons-io.version>
+        <commons-io.version>2.16.0</commons-io.version>
         <owner.version>1.0.12</owner.version>
         <assertj.version>3.24.2</assertj.version>
         <monte-screen-recorder.version>0.7.7.0</monte-screen-recorder.version>
         <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
         <google.zxing.version>3.5.3</google.zxing.version>
-        <lombok.version>1.18.30</lombok.version>
-        <google.guava.version>33.0.0-jre</google.guava.version>
+        <lombok.version>1.18.32</lombok.version>
+        <google.guava.version>33.1.0-jre</google.guava.version>
         <data.supplier.version>1.9.7</data.supplier.version>
         <javax.mail.version>1.6.2</javax.mail.version>
         <zip.version>1.17</zip.version>
-        <jackson.version>2.16.1</jackson.version>
+        <jackson.version>2.17.0</jackson.version>
         <datafaker.version>2.1.0</datafaker.version>
-        <telegram.bot.version>7.1.0</telegram.bot.version>
+        <telegram.bot.version>7.1.1</telegram.bot.version>
 
 
         <!-- Suite XML path -->
@@ -207,12 +207,18 @@
             <artifactId>log4j-core</artifactId>
             <version>${log4j.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>${log4j.version}</version>
-            <scope>test</scope>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.12</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.12</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
