Fix screenshot step passed and all steps in report

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,18 +1,23 @@
-extent.reporter.spark.start=true
-extent.reporter.spark.out=reports/CucumberExtentReports/CucumberExtentReports.html
-extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
-#Adding folder name and non repeating pattern
+extent.reporter.spark.start = true
+extent.reporter.spark.out = reports/CucumberExtentReports/CucumberExtentReports.html
+extent.reporter.spark.vieworder = dashboard,test,category,author,device,log,exception
+extent.reporter.spark.enable.device = true
+extent.reporter.spark.enable.author = true
+extent.reporter.spark.prefix.device = @device_
+extent.reporter.spark.prefix.author = @author_
+
 #basefolder.name=reports/CucumberReports/CucumberExtentReport
-#basefolder.datetimepattern=dd-MM-YYYY
+#basefolder.datetimepattern=dd-MM-YYYY-HH-mm-ss
+
 #Screenshot
-screenshot.dir=screenshots/
-screenshot.rel.path=/screenshots/
+screenshot.dir = reports/CucumberExtentReports/images/
+screenshot.rel.path = /reports/CucumberExtentReports/images/
 
-extent.reporter.spark.base64imagesrc=true
+extent.reporter.spark.base64imagesrc = true
 
-#PDF File
-extent.reporter.pdf.start=true
-extent.reporter.pdf.out=reports/CucumberExtentReports/CucumberExtentPdfReport.pdf
-
-extent.reporter.excel.start=false
-extent.reporter.excel.out=reports/ExcelReport/ExtentExcel.xlsx
+#PDF FILE
+extent.reporter.pdf.start = true
+extent.reporter.pdf.out = reports/CucumberExtentReports/CucumberExtentPdfReport.pdf
+#EXCEL FILE
+extent.reporter.excel.start = false
+extent.reporter.excel.out = reports/ExcelReport/ExtentExcel.xlsx
