--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -51,10 +51,10 @@ OPEN_REPORTS_AFTER_EXECUTION = no
 # This Email will be sent using Java mail API
 SEND_EMAIL_TO_USERS = no
 # Passed Steps Screenshot
-SCREENSHOT_PASSED_STEPS = no
+SCREENSHOT_PASSED_STEPS = yes
 # Failed Steps Screenshot
 SCREENSHOT_FAILED_STEPS = yes
-# Skipped Steps Screenshot
-SCREENSHOT_SKIPPED_STEPS = yes
 # All Steps Screenshot
 SCREENSHOT_ALL_STEPS = no
+
+DELETE_TEMP_FOLDER = yes
