Update takeScreenshotScenario in Hooks

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -15,7 +15,7 @@ BROWSER = chrome
 TARGET = local
 # headless mode only for chrome or firefox and local execution
 HEADLESS = false
-URL_CRM = https://rise.fairsketch.com/signin
+URL_CRM = https://rise.anhtester.com/signin
 # grid url and port
 REMOTE_URL = localhost
 REMOTE_PORT = 4444
@@ -57,4 +57,4 @@ SCREENSHOT_FAILED_STEPS = yes
 # All Steps Screenshot
 SCREENSHOT_ALL_STEPS = no
 
-DELETE_TEMP_FOLDER = yes
+DELETE_TEMP_FOLDER = no
