--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -45,7 +45,7 @@ VIDEO_RECORD = no
 #If yes -> Report name will be ExtentReports.html
 OVERRIDE_REPORTS = yes
 #open_reports_after_execution--> yes or no
-OPEN_REPORTS_AFTER_EXECUTION = yes
+OPEN_REPORTS_AFTER_EXECUTION = no
 #send_email_to_users --> yes or no
 #If yes -> then, provide your mail credentials -> src/main/java -> package mail.com.anhtester.EmailConfig;
 # This Email will be sent using Java mail API
