--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -55,8 +55,8 @@ SCREENSHOT_PASSED_STEPS = no
 # Failed Steps Screenshot
 SCREENSHOT_FAILED_STEPS = yes
 # All Steps Screenshot
-SCREENSHOT_ALL_STEPS = yes
+SCREENSHOT_ALL_STEPS = no
 # All Steps Detail Screenshot
-SCREENSHOT_ALL_STEPS_DETAIL = yes
+SCREENSHOT_ALL_STEPS_DETAIL = no
 # Delete the 'reports' folder before run test
-DELETE_TEMP_FOLDER = yes
+DELETE_TEMP_FOLDER = no
