--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -16,7 +16,7 @@ screenshot.rel.path = /reports/CucumberExtentReports/images/
 extent.reporter.spark.base64imagesrc = true
 
 #PDF FILE
-extent.reporter.pdf.start = true
+extent.reporter.pdf.start = false
 extent.reporter.pdf.out = reports/CucumberExtentReports/CucumberExtentPdfReport.pdf
 #EXCEL FILE
 extent.reporter.excel.start = false
