--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -60,3 +60,5 @@ SCREENSHOT_ALL_STEPS = no
 SCREENSHOT_ALL_STEPS_DETAIL = no
 # Delete the 'reports' folder before run test
 DELETE_TEMP_FOLDER = no
+# Locate to generate data from DataFaker
+LOCATE=en
