Update Selenium 4.29.0 support CDP 133

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ ExtentReports.zip
 logs/
 target/
 test-output/
-reports/
 CucumberReports/
 HDSD.txt
 *.png
@@ -19,3 +18,4 @@ HDSD.txt
 *.iml
 screenshots/
 allure-report/
+exports/
