--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -23,18 +23,18 @@ REMOTE_PORT = 4444
 PROJECT_NAME = Automation Framework Cucumber TestNG | Anh Tester
 REPORT_TITLE = Report | Automation Framework Cucumber TestNG | Anh Tester
 EXTENT_REPORT_NAME = ExtentReport
-EXTENT_REPORT_FOLDER = reports/CucumberExtentReports
+EXTENT_REPORT_FOLDER = exports/reports/CucumberExtentReports
 EXTENT_REPORT_PDF = PdfReport.pdf
-EXPORT_VIDEO_PATH = ExportData/Videos
-EXPORT_CAPTURE_PATH = ExportData/Images
-# Send report to Telegram Bot --> yes or no
+EXPORT_VIDEO_PATH = exports/ExportData/Videos
+EXPORT_CAPTURE_PATH = exports/ExportData/Images
+# Send reports to Telegram Bot --> yes or no
 # If yes, please input TELEGRAM_TOKEN and TELEGRAM_CHATID
 SEND_REPORT_TO_TELEGRAM = no
 TELEGRAM_TOKEN =
 TELEGRAM_CHATID =
-# Zip folder report after run test --> yes or no
+# Zip folder reports after run test --> yes or no
 ZIP_FOLDER = no
-ZIP_FOLDER_PATH = reports/CucumberExtentReports
+ZIP_FOLDER_PATH = exports/reports/CucumberExtentReports
 ZIP_FOLDER_NAME = CucumberExtentReports.zip
 # Video Record
 VIDEO_RECORD = no
