Update Selenium 4.32.0 and core Cucumber Framework

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.anhtester</groupId>
     <artifactId>anhtester-cucumber-testng</artifactId>
-    <version>1.8.5</version>
+    <version>1.8.6</version>
     <name>TestAutomationFrameworkCucumberTestNG</name>
     <url>https://github.com/anhtester/AutomationFrameworkCucumberTestNG</url>
 
@@ -15,16 +15,16 @@
         <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java-compiler.version>17</java-compiler.version>
-        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
 
-        <cucumber.java.version>7.21.1</cucumber.java.version>
-        <gherkin.version>32.0.0</gherkin.version>
+        <cucumber.java.version>7.22.2</cucumber.java.version>
+        <gherkin.version>32.1.1</gherkin.version>
         <cucumber-reporting.version>5.8.4</cucumber-reporting.version>
-        <selenium.version>4.29.0</selenium.version>
+        <selenium.version>4.32.0</selenium.version>
         <testng.version>7.11.0</testng.version>
-        <aspectjweaver.version>1.9.22.1</aspectjweaver.version>
+        <aspectjweaver.version>1.9.24</aspectjweaver.version>
         <log4j.version>2.24.3</log4j.version>
-        <slf4j.version>2.0.16</slf4j.version>
+        <slf4j.version>2.0.17</slf4j.version>
         <allure-testng.version>2.29.1</allure-testng.version>
         <allure-maven.version>2.15.2</allure-maven.version>
         <allure-environment-writer.version>1.0.0</allure-environment-writer.version>
@@ -32,25 +32,25 @@
             https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline
         </allure.cmd.download.url>
         <extentreports.version>5.1.2</extentreports.version>
-        <apache-poi.version>5.4.0</apache-poi.version>
+        <apache-poi.version>5.4.1</apache-poi.version>
         <apache-poi-xml.version>5.2.5</apache-poi-xml.version>
-        <commons-io.version>2.18.0</commons-io.version>
+        <commons-io.version>2.19.0</commons-io.version>
         <owner.version>1.0.12</owner.version>
         <assertj.version>3.24.2</assertj.version>
         <monte-screen-recorder.version>0.7.7.0</monte-screen-recorder.version>
         <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
-        <lombok.version>1.18.36</lombok.version>
+        <lombok.version>1.18.38</lombok.version>
         <data.supplier.version>1.9.7</data.supplier.version>
         <javax.mail.version>1.6.2</javax.mail.version>
         <zip.version>1.17</zip.version>
-        <rest-assured.version>5.5.1</rest-assured.version>
-        <gson.version>2.12.1</gson.version>
-        <jackson-databind.version>2.18.2</jackson-databind.version>
-        <datafaker.version>2.4.2</datafaker.version>
+        <rest-assured.version>5.5.2</rest-assured.version>
+        <gson.version>2.13.1</gson.version>
+        <jackson-databind.version>2.19.0</jackson-databind.version>
+        <datafaker.version>2.4.3</datafaker.version>
         <telegram.bot.version>8.3.0</telegram.bot.version>
         <commons-lang3.version>3.17.0</commons-lang3.version>
         <extentreports-cucumber7-adapter.version>1.14.0</extentreports-cucumber7-adapter.version>
-        <mysql-connector-j.version>9.2.0</mysql-connector-j.version>
+        <mysql-connector-j.version>9.3.0</mysql-connector-j.version>
 
         <!-- Suite XML path -->
         <suite.feature>src/test/resources/suites/SuiteFeatureByTag.xml</suite.feature>
@@ -213,13 +213,13 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.16</version>
+            <version>2.0.17</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>2.0.16</version>
+            <version>2.0.17</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
@@ -387,9 +387,9 @@
                 <artifactId>allure-maven</artifactId>
                 <version>${allure-maven.version}</version>
                 <configuration>
-                    <reportVersion>${allure-testng.version}</reportVersion>
+                    <reportVersion>2.34.0</reportVersion>
                     <allureDownloadUrl>
-                        ${allure.cmd.download.url}/${allure-testng.version}/allure-commandline-${allure-testng.version}.zip
+                        ${allure.cmd.download.url}/2.34.0/allure-commandline-2.34.0.zip
                     </allureDownloadUrl>
                 </configuration>
             </plugin>
