--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,12 +15,57 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'corretto'
-        java-version: '17'
-        cache: maven
-    - name: Build with Maven
-      run: mvn clean test --file pom.xml
+      -  uses: actions/checkout@v4
+         with:
+           submodules: recursive
+           fetch-depth: 0
+      -  name: Set up JDK 17
+         uses: actions/setup-java@v4
+         with:
+           distribution: 'corretto'
+           java-version: '17'
+           cache: maven
+      -  name: Run test with Maven
+         run: mvn clean test allure:report --file pom.xml
+
+      -  name: Upload Extent Report
+         if: always()
+         uses: actions/upload-artifact@v4
+         with:
+           name: cucumber-extent-report
+           path: exports/reports/CucumberExtentReports/CucumberExtentReports.html
+
+      -  name: Upload Cucumber Report
+         if: always()
+         uses: actions/upload-artifact@v4
+         with:
+           name: cucumber-report
+           path: exports/reports/CucumberReports/cucumber-reports/cucumber-html-reports
+
+      -  name: Upload Allure Report
+         if: always()
+         uses: actions/upload-artifact@v4
+         with:
+           name: allure-report
+           path: target/site/allure-maven-plugin/
+
+      -  name: Upload Logs file
+         if: always()
+         uses: actions/upload-artifact@v4
+         with:
+           name: logs-file
+           path: exports/logs/applog.log
+
+      -  name: Upload videos for tests
+         if: always()
+         uses: actions/upload-artifact@v4
+         with:
+           name: test-videos
+           path: exports/ExportData/Videos
+
+      -  name: Upload screenshots for tests
+         if: always()
+         uses: actions/upload-artifact@v4
+         with:
+           name: test-screenshots
+           path: exports/ExportData/Images
