--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,31 +1,42 @@
-#Declare loggers
-log4j.logger.io.qameta.allure.AllureLifecycle = OFF
-status=error
-name=Log4j2PropertiesConfig
-appenders=a_console, a_rolling
-rootLogger.level=info
-rootLogger.appenderRefs=ar_console,ar_rolling
-rootLogger.appenderRef.ar_console.ref=StdoutAppender
-rootLogger.appenderRef.ar_rolling.ref=RollingAppender
-#Console Logger
-appender.a_console.type=Console
-appender.a_console.name=StdoutAppender
-appender.a_console.layout.type=PatternLayout
-appender.a_console.layout.pattern=[%level] %d{dd-MM-yyyy HH:mm:ss} [%c{1}] - %msg%n
-#Rolling Logger
-appender.a_rolling.type=RollingFile
-appender.a_rolling.name=RollingAppender
-appender.a_rolling.layout.pattern=[%level] %d{dd-MM-yyyy HH:mm:ss} [%t] [%c{1}] - %msg%n
-appender.a_rolling.fileName=exports/logs/applog.log
-appender.a_rolling.filePattern=exports/logs/applog-%d{dd-MM-yyyy}.log
-appender.a_rolling.layout.type=PatternLayout
-appender.a_rolling.policies.type=Policies
-appender.a_rolling.policies.time.type=TimeBasedTriggeringPolicy
-appender.a_rolling.policies.time.interval=1
-# To change log file every day
-appender.a_rolling.policies.time.modulate=true
-# To change log file after 10MB size
-appender.a_rolling.policies.size.type=SizeBasedTriggeringPolicy
-appender.a_rolling.policies.size.size=10MB
-appender.a_rolling.strategy.type=DefaultRolloverStrategy
-appender.a_rolling.strategy.max=20
+status = error
+name = Log4j2PropertiesConfig
+
+# Append console + rolling
+appenders = console, rolling
+
+# ================================
+# Console Appender
+# ================================
+appender.console.type = Console
+appender.console.name = Console
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = [%level] %d{dd-MM-yyyy HH:mm:ss} [%c{1}] - %msg%n
+
+# ================================
+# Rolling File Appender
+# ================================
+appender.rolling.type = RollingFile
+appender.rolling.name = RollingFile
+appender.rolling.fileName = exports/logs/applog.log
+appender.rolling.filePattern = exports/logs/applog-%d{dd-MM-yyyy}.log
+appender.rolling.layout.type = PatternLayout
+appender.rolling.layout.pattern = [%level] %d{dd-MM-yyyy HH:mm:ss} [%t] [%c{1}] - %msg%n
+
+appender.rolling.policies.type = Policies
+appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
+appender.rolling.policies.time.interval = 1
+appender.rolling.policies.time.modulate = true
+
+appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
+appender.rolling.policies.size.size = 10MB
+
+appender.rolling.strategy.type = DefaultRolloverStrategy
+appender.rolling.strategy.max = 20
+
+# ================================
+# Root Logger
+# ================================
+rootLogger.level = info
+rootLogger.appenderRefs = console, rolling
+rootLogger.appenderRef.console.ref = Console
+rootLogger.appenderRef.rolling.ref = RollingFile
